# SMAK

./: Makefile  README.md  pyproject.toml
demo/: README.md  workspace_config.yaml
demo/src/: auth.py
scripts/: __init__.py  verify_models.py
src/smak/: __init__.py  cli.py  config.py  embedding.py  mcp_server.py  models.py  server.py  verify_models.py
src/smak/agent/: react.py  router.py  tools.py
src/smak/bridge/: __init__.py  models.py
src/smak/core/: domain.py
src/smak/db/: adapter.py
src/smak/ingest/: embedder.py  pipeline.py  sidecar.py
src/smak/ingest/parsers/: __init__.py  issue.py  perl.py  python.py
src/smak/storage/: __init__.py  faiss_adapter.py  milvus.py
src/smak/utils/: __init__.py  llm_parser.py  yaml.py
tests/: __init__.py  test_agent.py  test_bridge_models.py  test_cli.py  test_config.py  test_db.py  test_domain.py  test_embedder.py  test_embedding.py  test_mcp_server.py  test_mesh_retrieval.py  test_parsers.py  test_pipeline.py  test_server.py  test_sidecar.py  test_storage_faiss.py  test_storage_milvus.py  test_verify_models.py  test_yaml.py  test_yaml_utils.py
