[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "smak"
version = "0.1.0"
description = "SMAK prototype"
requires-python = ">=3.10"
dependencies = [
    "click",
]

[project.scripts]
smak = "smak.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
